--- a/MVC SportGoods/Views/Shared/_Layout.cshtml
+++ b/MVC SportGoods/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="About">About</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Blog" asp-action="Blog">Blog</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="SportGoods" asp-action="SportsViewModel">SportGoods</a>
                         </li>
                     </ul>
                 </div>
