--- a/MVC SportGoods/Views/Shared/_Layout.cshtml
+++ b/MVC SportGoods/Views/Shared/_Layout.cshtml
@@ -40,6 +40,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="SportGoods" asp-action="SportsViewModel">SportGoods</a>
                         </li>
+                        <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Admin">Admin</a>
+                        </li>
                     </ul>
                 </div>
             </div>
