--- a/MVC SportGoods/Views/Admin/CreatePost.cshtml
+++ b/MVC SportGoods/Views/Admin/CreatePost.cshtml
@@ -8,21 +8,21 @@
     <div class="form-group row">
         <label asp-for="name" class="col-sm-2 col-form-label">Name</label>
         <div class="col-sm-10">
-            <input asp-for="name" class="form-control" placeholder="Author" />
+            <input asp-for="name" class="form-control" placeholder="Name" />
             <span asp-validation-for="name" class="text-danger"></span>
         </div>
     </div>
     <div class="form-group row">
         <label asp-for="description" class="col-sm-2 col-form-label">Description</label>
         <div class="col-sm-10">
-            <input asp-for="description" class="form-control" placeholder="Title" />
+            <input asp-for="description" class="form-control" placeholder="Description" />
             <span asp-validation-for="description" class="text-danger"></span>
         </div>
     </div>
     <div class="form-group row">
         <label asp-for="price" class="col-sm-2 col-form-label">Price</label>
         <div class="col-sm-10">
-            <textarea asp-for="price" class="form-control" placeholder="Preview"></textarea>
+            <textarea asp-for="price" class="form-control" placeholder="Price"></textarea>
             <span asp-validation-for="price" class="text-danger"></span>
         </div>
     </div>
