--- a/MVC SportGoods/Views/SportGoods/SportsViewModel.cshtml
+++ b/MVC SportGoods/Views/SportGoods/SportsViewModel.cshtml
@@ -16,7 +16,7 @@
             <div>Description:@item.description</div>
             <a class="btn btn-success" asp-controller="SportGoods" asp-action="SportGood" asp-route-id="@item.id">Read more</a>
             <a class="btn btn-warning" asp-controller="SportGoods" asp-action="Edit" asp-route-id="@item.id">Edit</a>
-            <a class="btn btn-danger" asp-controller="SportGoods" asp-action="Post" asp-route-id="@item.id">Delete</a>
+            <a class="btn btn-danger" asp-controller="SportGoods" asp-action="Delete" asp-route-id="@item.id">Delete</a>
         </div>
             }
         }
