--- a/MVC SportGoods/Views/_ViewImports.cshtml
+++ b/MVC SportGoods/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using MVC_SportGoods
 @using MVC_SportGoods.Models
+@using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
