--- a/MVC SportGoods/Views/_ViewImports.cshtml
+++ b/MVC SportGoods/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using MVC_SportGoods
 @using MVC_SportGoods.Models
 @using Microsoft.AspNetCore.Identity
+@using MVC_SportGoods.ViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
