--- a/MVC SportGoods/Views/Account/Register.cshtml
+++ b/MVC SportGoods/Views/Account/Register.cshtml
@@ -24,6 +24,18 @@
                 <input asp-for="ConfirmPassword" class="form-control" />
                 <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="City"></label>
+                <input asp-for="City" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label asp-for="Street"></label>
+                <input asp-for="Street" class="form-control" />
+            </div>
+            <div class="form-group">
+                <label asp-for="Position"></label>
+                <input asp-for="Position" class="form-control" />
+            </div>
             <button type="submit" class="btn btn-primary">Register</button>
         </form>
     </div>
