add edit delete

--- a/MVC SportGoods/Views/Shared/_Layout.cshtml
+++ b/MVC SportGoods/Views/Shared/_Layout.cshtml
@@ -41,11 +41,30 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="SportGoods" asp-action="SportsViewModel">SportGoods</a>
                         </li>
+
+                        @if (SignInManager.IsSignedIn(User) && User.IsInRole("Moderator"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Admin">AdminPanel</a>
+                            </li>
+                        }
+                        @*@if (SignInManager.IsSignedIn(User) && User.IsInRole("Admin"))*@
+                        @*{*@
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
+                                   data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    Manage
+                                </a>
+                                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                    <a class="dropdown-item" asp-controller="Administrator"
+                                       asp-action="ListUsers">Users</a>
+                                    <a class="dropdown-item" asp-controller="Administrator"
+                                       asp-action="ListRoles">Roles</a>
+                                </div>
+                            </li>
+                        @*}*@
                         @if (SignInManager.IsSignedIn(User))
                         {
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Admin" asp-action="Admin">Admin</a>
-                        </li>
                             <li class="nav-item">
                                 <form method="post" asp-controller="Account" asp-action="logout">
                                     <button type="submit" style="width:auto"
