--- a/MVC SportGoods/Views/Administrator/ListRoles.cshtml
+++ b/MVC SportGoods/Views/Administrator/ListRoles.cshtml
@@ -1,31 +1,44 @@
-﻿@model IEnumerable<IdentityRole>
+﻿@model IEnumerable<AppUser>
 
 @{
-    ViewBag.Title = "All Roles";
+    ViewBag.Title = "All Users";
 }
 
-<h1>All Roles</h1>
+<h1>All Users</h1>
 
 @if (Model.Any())
 {
-    <a class="btn btn-primary mb-3" style="width:auto" asp-action="CreateRole"
-       asp-controller="administration">Add new role</a>
+    <a asp-action="Register" asp-controller="Account"
+       class="btn btn-primary mb-3" style="width:auto">
+        Add new user
+    </a>
 
-    foreach (var role in Model)
+    foreach (var user in Model)
     {
         <div class="card mb-3">
             <div class="card-header">
-                Role Id : @role.Id
+                User Id : @user.Id
             </div>
             <div class="card-body">
-                <h5 class="card-title">@role.Name</h5>
+                <h5 class="card-title">@user.UserName</h5>
             </div>
             <div class="card-footer">
-                <a asp-controller="Administrator" asp-action="EditRole"
-                   asp-route-id="@role.Id" class="btn btn-primary">
-                    Edit
-                </a>
-                <a href="#" class="btn btn-danger">Delete</a>
+                <form method="post" asp-action="DeleteUser" asp-route-id="@user.Id">
+                    <a asp-controller="Administrator" asp-action="Edituser"
+                       asp-route-id="@user.Id" class="btn btn-primary">Edit</a>
+
+                    <span id="confirmDeleteSpan_@user.Id" style="display:none">
+                        <span>Are you sure you want to delete?</span>
+                        <button type="submit" class="btn btn-danger">Yes</button>
+                        <a href="#" class="btn btn-primary"
+                           onclick="confirmDelete('@user.Id', false)">No</a>
+                    </span>
+
+                    <span id="deleteSpan_@user.Id">
+                        <a href="#" class="btn btn-danger"
+                           onclick="confirmDelete('@user.Id', true)">Delete</a>
+                    </span>
+                </form>
             </div>
         </div>
     }
@@ -34,15 +47,15 @@ else
 {
     <div class="card">
         <div class="card-header">
-            No roles created yet
+            No users created yet
         </div>
         <div class="card-body">
             <h5 class="card-title">
-                Use the button below to create a role
+                Use the button below to create a user
             </h5>
             <a class="btn btn-primary" style="width:auto"
-               asp-controller="Administrator" asp-action="CreateRole">
-                Create Role
+               asp-controller="Account" asp-action="Register">
+                Add new user
             </a>
         </div>
     </div>
