--- a/MVC SportGoods/Views/_ViewImports.cshtml
+++ b/MVC SportGoods/Views/_ViewImports.cshtml
@@ -3,3 +3,4 @@
 @using Microsoft.AspNetCore.Identity
 @using MVC_SportGoods.ViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Korzh.EasyQuery.AspNetCore
